package org.example;


public interface IButton {
    void create();
}
